# pychebfun

./: .gitignore  LICENSE  README.md  THOUGHTS.md  chebfun-tutorial.ipynb  matplotlibrc  pychebfun.py  pychebfun.py.bak  pyproject.toml  requirements.txt  setup.py  tools.py
docs/: chebfun-tutorial.ipynb
src/pychebfun/: __init__.py  tools.py
test/: test_pychebfun.py
